# MicroScript

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: main.c  microscript.c  microscript.h
